--- a/.github/workflows/update-channels.yml
+++ b/.github/workflows/update-channels.yml
@@ -12,6 +12,7 @@ jobs:
       # ① リポジトリをチェックアウト
       - uses: actions/checkout@v3
         with:
+	  token: ${{ secrets.GITHUB_TOKEN }}
           persist-credentials: true
 
       # ② Node.js セットアップ
