--- a/.github/workflows/update-channels.yml
+++ b/.github/workflows/update-channels.yml
@@ -1,27 +1,29 @@
+# .github/workflows/update-channels.yml
 name: Daily VTuber Update
 
 on:
   schedule:
-    - cron: '0 0 * * *'
-  workflow_dispatch:
+    - cron: '0 0 * * *'       # 毎日00:00 UTC（日本時間9:00頃）
+  workflow_dispatch:          # 手動実行用
 
 jobs:
   update:
     runs-on: ubuntu-latest
     steps:
-      # ① リポジトリをチェックアウト
-      - uses: actions/checkout@v3
+      # ① リポジトリをチェックアウト（認証トークンを含める）
+      - name: Checkout repository
+        uses: actions/checkout@v3
         with:
-	  token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}
           persist-credentials: true
 
-      # ② Node.js セットアップ
+      # ② Node.js をセットアップ
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
 
-      # ③ .env.local にシークレットを書き込む
+      # ③ 環境変数ファイルを生成
       - name: Create env file
         run: echo "YOUTUBE_API_KEY=${{ secrets.YOUTUBE_API_KEY }}" > .env.local
 
@@ -29,17 +31,17 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      # ⑤ スクリプトで channels.json を生成
+      # ⑤ VTuber データを取得して channels.json を生成
       - name: Generate channels.json
         run: node scripts/updateChannels.js
 
-      # ⑥ 生成されたファイルをコミット＆プッシュ
+      # ⑥ 生成結果をコミット＆プッシュ
       - name: Commit and push
         run: |
           git config user.name 'github-actions[bot]'
           git config user.email 'github-actions[bot]@users.noreply.github.com'
           git add public/channels.json
           git commit -m 'chore: auto-update channels.json' || echo "no changes to commit"
-          git push
+          git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
