--- a/.github/workflows/update-channels.yml
+++ b/.github/workflows/update-channels.yml
@@ -2,8 +2,8 @@ name: Daily VTuber Update
 
 on:
   schedule:
-    - cron: '0 0 * * *'       # 毎日00:00 UTC（日本時間9:00頃）
-  workflow_dispatch:          # ← これが “Run workflow” ボタンを出すトリガー
+    - cron: '0 0 * * *'
+  workflow_dispatch:
 
 jobs:
   update:
@@ -34,7 +34,6 @@ jobs:
           git config user.name 'github-actions[bot]'
           git config user.email 'github-actions[bot]@users.noreply.github.com'
           git add public/channels.json
-          git commit -m 'chore: auto-update channels.json' || echo "no changes"
-          git push origin main
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          git commit -m 'chore: auto-update channels.json' || echo "no changes to commit"
+          # ここでトークン埋め込みURLを使ってpush
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:main
