--- a/.github/workflows/update-channels.yml
+++ b/.github/workflows/update-channels.yml
@@ -1,4 +1,8 @@
+# .github/workflows/update-channels.yml
 name: Daily VTuber Update
+
+permissions:
+  contents: write
 
 on:
   schedule:
@@ -35,5 +39,4 @@ jobs:
           git config user.email 'github-actions[bot]@users.noreply.github.com'
           git add public/channels.json
           git commit -m 'chore: auto-update channels.json' || echo "no changes to commit"
-          # ここでトークン埋め込みURLを使ってpush
           git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:main
